<resources>
    <string name="app_name">EasyCalculator</string>
    <string name="enter_value_hint">Enter the Value</string>
    <string name="result_label">Result: </string>
    <string name="default_zero">0</string>     <!-- Display ke lie -->
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="plus_symbol">+</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="minus_symbol">-</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="letter_x">X</string>
    <string name="number_zero">Zero</string>      <!-- Accessibility ke lie -->
    <string name="dot">.</string>
    <string name="clear_entry">CE</string>
    <string name="slash">/</string>
    <string name="submit">Submit</string>
    <string name="error_message">Error</string>
    <string name="result_text">Result is: %1$s</string>




</resources>