<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="40sp"
        android:textSize="30sp"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/enter_value_hint"
        android:autofillHints="none"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/result_label" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/default_zero" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_one"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_two"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_three"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/plus_symbol"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_four"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_five"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_six"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/minus_symbol"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_seven"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_eight"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_nine"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/letter_x"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/dot"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/number_zero"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/clear_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/clear_entry"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_grey"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/slash"
                style="?android:attr/buttonBarButtonStyle"/>
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/yellow"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/submit"
        style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>